# FastApi-GRPC-Template

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: bc8c7c54b01b_initial.py
src/: admin.py  grpc_main.py  main.py  settings.py
src/api/: routes.py
src/api/v1/: __init__.py  healthy.py
src/connections/: postgres.py
src/core/: config.py
src/dependencies/: access_control.py
src/models/: base.py
src/protos/: user.proto
src/repositories/: base.py
src/rpc/user/: client.py  dependencies.py  service.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/utils/: formatter.py
tests/: Dockerfile  entrypoint.sh  requirements.txt
tests/functional/: conftest.py  settings.py
tests/functional/endpoints/: test_ping.py
tests/functional/fixtures/: requests.py  sessions.py
tests/functional/utils/: backoff.py  wait_for_postgres.py  wait_for_redis.py
